tests/ui/traits/issue-65284-suggest-generic-trait-bound.rs
trait Foo {
    fn foo(&self);
}

trait Bar {}

fn do_stuff<T : Bar>(t : T) {
    t.foo() //~ ERROR no method named `foo` found
}

fn main() {}
